Added functions to compute CSS classes for total, complete and fail.

--- a/sass/_local_styles.scss
+++ b/sass/_local_styles.scss
@@ -1,3 +1,7 @@
+$pass-color: #ccffcc;
+$run-color: #ffffcc;
+$fail-color: #ff9999;
+
 // Styles for all three summary boxes
 //
 .all-summaries {
@@ -32,3 +36,14 @@
   width: 50px;
 }
 
+.pass-color {
+  background-color: $pass-color;
+}
+
+.run-color {
+  background-color: $run-color;
+}
+
+.fail-color {
+  background-color: $fail-color;
+}
