--- a/sass/_local_styles.scss
+++ b/sass/_local_styles.scss
@@ -12,6 +12,10 @@ button {
   color: $button-text-color;
 }
 
+a {
+  margin: 0 8px 0 8px;
+}
+
 .results-table {
   margin-top: 50px;
   padding: 10px 10px 0px 10px;
